<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jacek.biforek.AddEventActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/Where"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Where"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:hint="@string/Where_hint" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/When"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/When"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:hint="@string/When_hint" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/Which"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Which"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:hint="@string/Which_hint" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/Alko"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Alko"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:hint="@string/Alko_hint" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/Club"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Club"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:hint="@string/Club_hint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/Addition"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Addition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:hint="@string/Addition_hint" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20sp"
                android:gravity="bottom">

                <ProgressBar
                    android:id="@+id/Progres"
                    style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/Button_Share"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="1dp"/>

                <Button
                    android:id="@+id/Button_Share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Button_share"
                    android:onClick="ShareButton"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
